apps/base/kube-prometheus-stack/kube-prometheus-stack-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: kube-prometheus-stack
  annotations:
    gethomepage.dev/href: "https://alerts.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/description: "Receives and manages Prometheus alerts."
    gethomepage.dev/app: alertmanager
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prometheus.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`alerts.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: kube-prometheus-stack
  annotations:
    gethomepage.dev/href: "https://prometheus.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/description: "Metrics collection and monitoring."
    gethomepage.dev/app: prometheus
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prometheus.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`prometheus.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
